          Release Notes for NEdit Version 5.5, October 2004


$Id: ReleaseNotes,v 1.33 2005/11/28 22:43:58 yooden Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.

Bugs fixed in $NEXT_VERSION

  - The text insertion cursor does no longer blink while typing
    (SF bug #906878).

  - The status bar reflects a changed keybinding in the shell command banner.

  - There is now a pattern for highlighting nested command substitution in
    shell scripts (SF patch #1010742).

  - Duplicate display bugs SF#464967 and SF#1041077 are fixed.

  - A typo in Ada's syntax highlighting patterns is fixed (SF bug #858874).
  

New features in 5.5 

  - The most important new feature is the introduction of window tabs
    (SF patches #569287 and #893177).
    
  - More efficient string search operations for the macro language.
  
  - Auto-scrolling is now (partly) configurable through the preference menu.
        
  - Find and Clear buttons for i-search bar (SF patch #891884).
  
  - Faster user-defined menu creation (SF patch #891126).
  
  - Open documents on current desktop (SF patch #963120)
  
  - Superuser receives a warning when trying to overwrite a read-only file.
  
  - Simplified global font resources.
  
  - Macro language: added new $args[] array and removed 9 arguments limit 
    for macros
    
  - Improved Latex & Python syntax highlighting patterns
  
Bugs fixed in 5.5

  - If underscore (_) is among the word delimiters for a language mode then