@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.33 2005/11/28 22:43:58 yooden Exp $
+$Id: ReleaseNotes,v 1.34 2006/01/02 22:35:04 yooden Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -26,7 +26,14 @@ Bugs fixed in $NEXT_VERSION
   - Duplicate display bugs SF#464967 and SF#1041077 are fixed.
 
   - A typo in Ada's syntax highlighting patterns is fixed (SF bug #858874).
-  
+
+  - The shell used to run programs from the shell_command() macro function
+    and from the Shell menu is now part of NEdit's normal settings, and no
+    longer in the X server's settings. It also defaults to the user's login
+    shell, not /bin/csh. This fixes SF#403738 and SF#880607.
+
+  - File history is now consistent across multiple sessions (SF bug #557032).
+
 
 New features in 5.5 
 
